--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <header>
+        <a href="./assets/html/leaderboard.html">View High Scores</a>
+        <div class="game-timer">
+            <h3>Time left:</h3>
+            <div class="time-count">90</div>
+        </div>
+    </header>
+
 
     <script src="./assets/js/script.js"></script>
 </body>
