changed some heading elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
             <div class="time-count">90</div>
         </div>
     </header>
-
+    <main>
+        <section>
+            <h1>
+                Welcome to this Coding Quiz!
+            </h1>
+            <h3>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo ipsum, illum qui nostrum ab
+                fuga, saepe dicta a aut fugit officia, optio animi alias aliquam dignissimos dolorem delectus natus?
+            </h3>
+            <div class="buttons"></div>
+        </section>
+    </main>
 
     <script src="./assets/js/script.js"></script>
 </body>
