added initial CSS styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="main-section">
             <h1>
                 Welcome to this Coding Quiz!
             </h1>
@@ -25,7 +25,7 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo ipsum, illum qui nostrum ab
                 fuga, saepe dicta a aut fugit officia, optio animi alias aliquam dignissimos dolorem delectus natus?
             </h3>
-            <div class="buttons"></div>
+            <div class="buttons">Start Quiz</div>
         </section>
     </main>
 
