--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </header>
     <main>
         <section class="main-section">
-            <h1>
+            <h1 class="main-heading">
                 Welcome to this Coding Quiz!
             </h1>
-            <h3>
+            <h3 class="sub-heading">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo ipsum, illum qui nostrum ab
                 fuga, saepe dicta a aut fugit officia, optio animi alias aliquam dignissimos dolorem delectus natus?
             </h3>
