added answer buttons and styling

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 fuga, saepe dicta a aut fugit officia, optio animi alias aliquam dignissimos dolorem delectus natus?
             </h3>
             <div class="buttons">Start Quiz</div>
+            <section class="answer-section"></section>
         </section>
     </main>
 
