added question array and progression

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
                 fuga, saepe dicta a aut fugit officia, optio animi alias aliquam dignissimos dolorem delectus natus?
             </h3>
             <div class="buttons">Start Quiz</div>
-            <section class="answer-section"></section>
+            <section class="answer-section">
+                <button class="answer1"></button>
+                <button class="answer2"></button>
+                <button class="answer3"></button>
+                <button class="answer4"></button>
+            </section>
         </section>
     </main>
 
