added actual questions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="./assets/html/leaderboard.html">View High Scores</a>
         <div class="game-timer">
             <h4>Time left:</h4>
-            <div class="time-count">90</div>
+            <div class="time-count">50</div>
         </div>
     </header>
     <main>
@@ -26,8 +26,7 @@
                 Welcome to this Coding Quiz!
             </h1>
             <h3 class="sub-heading">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo ipsum, illum qui nostrum ab
-                fuga, saepe dicta a aut fugit officia, optio animi alias aliquam dignissimos dolorem delectus natus?
+                Answer questions about basic coding concepts!
             </h3>
             <div class="buttons">Start Quiz</div>
             <section class="answer-section">
